--- a/src/main/resources/assets/luckytntmod/lang/ru_ru.json
+++ b/src/main/resources/assets/luckytntmod/lang/ru_ru.json
@@ -82,7 +82,7 @@
 	"block.luckytntmod.turret_tnt" : "Динамит Турель",
 	"block.luckytntmod.pulse_tnt" : "Пульсирующий Динамит",
 	"block.luckytntmod.dividing_tnt" : "Делящийся Динамит",
-	"block.luckytntmod.picky_tnt" : "Ломающий Динамит",
+	"block.luckytntmod.picky_tnt" : "Подбирающий Динамит",
 	"block.luckytntmod.big_tnt" : "Большой Динамит",
 	"block.luckytntmod.ice_meteor_tnt" : "Динамит-Ледяной Метеор",
 	"block.luckytntmod.honey_tnt" : "Медовый Динамит",
@@ -262,7 +262,7 @@
 	"item.luckytntmod.homing_dynamite" : "Самонаводящаяся Динамитная Шашка",
 	"item.luckytntmod.pulse_dynamite" : "Пульсирующая Динамитная Шашка",
 	"item.luckytntmod.physics_dynamite" : "Физическая Динамитная Шашка",
-	"item.luckytntmod.picky_dynamite" : "Ломающая Динамитная Шашка",
+	"item.luckytntmod.picky_dynamite" : "Подбирающая Динамитная Шашка",
 	"item.luckytntmod.cluster_dynamite" : "Кластерная Динамитная Шашка",
 	"item.luckytntmod.tunneling_dynamite" : "Тунелирующая Динамитная Шашка",
 	"item.luckytntmod.xray_dynamite" : "XRay Динамитная Шашка",
@@ -361,21 +361,21 @@
 	"item.luckytntmod.uranium_ingot" : "Урановый Слиток",
 	"item.luckytntmod.antimatter" : "Антиматерия",
 	"item.luckytntmod.configuration_wand" : "Посох Настраивания",
-	"item.luckytntmod.death_ray_ray" : "Луч Луч Смерти",
+	"item.luckytntmod.death_ray_ray" : "Луч Луча Смерти",
 	"item.luckytntmod.vacuum_cleaner" : "Пылесос",
        
-    	"item.floating_island.info" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
+    "item.floating_island.info" : "\u00A77\u00A7oИзменяйте высоту острова в конфиг файле! На сервере также нужно будет изменить конфиг сервера!",	
 	"item.smoke_tnt.info" : "\u00A77\u00A7oИзменяйте цвет дыма правым кликом, используя красный, зеленый, синий, белый или черный краситель!",
    	"item.gotthard_tunnel.info": "\u00A77\u00A7oКликните правой кнопкой мыши с помощью посоха настраивания, чтобы сгенерировать дорогу!",
 	"item.entity_firework.info" : "\u00A77\u00A7oБлижайшая сущность, не являющаяся игроком, будет выбрана для фейерверка!",
  	"item.item_firework.info" : "\u00A77\u00A7oКликните ПКМ предметом по динамиту, чтобы использовать его в фейерверке!",
  	"item.custom_tnt.info" : "\u00A77\u00A7oИзменяйте эффекты этого динамита в конфиг файле! На сервере также нужно изменить конфиг сервера!",
- 	"item.custom_firework.info" : "\u00A77\u00A7oБлок под этим динамит будет выбран для фейерверка!", 	
- 	"item.structure_tnt.info" : "\u00A77\u00A7oЩелкните правой кнопкой мыши по этому TNT Палочкой настройки, чтобы изменить структуру, которая будет размещена!",	
-	"item.configuration_wand.info": "\u00A77\u00A7oКликните правой кнопкой мыши этим посохом по особому динамиты, чтобы изменить их настройку!",
+ 	"item.custom_firework.info" : "\u00A77\u00A7oБлок под этим динамитом будет выбран для фейерверка!",
+ 	"item.structure_tnt.info" : "\u00A77\u00A7oНажмите правой кнопкой мыши по этому динамиту с помощью Посоха Настраивания чтобы поменять размещенную структуру!",
+	"item.configuration_wand.info": "\u00A77\u00A7oКликните правой кнопкой мыши этим посохом по особому динамиту, чтобы изменить их настройку!",
 	"item.antimatter.info": "\u00A77\u00A7oМожет быть создана, если урановая руда была уничтожена с помощью Луча Луча Смерти!",
 	"item.obsidian_rail.info" : "\u00A77\u00A7oОбсидиановые рельсы имеют большое сопротивление ко взрывам. Вагонетки, взоравнные на них, не будут наносить урон блокам!",
-	"item.vacuum_cleaner.info" : "\u00A77\u00A7oИспользуй пылесос, чтобы избавиться от этих надоедливых токсичных облаков!",
+	"item.vacuum_cleaner.info" : "\u00A77\u00A7oИспользуйте пылесос, чтобы избавиться от этих надоедливых токсичных облаков!",
 	
 	"item.grande_finale.info": "\u00A77\u00A7o*Динамит Сообщества* Спасибо за 100.000 загрузок!",
 	
@@ -462,7 +462,7 @@
 	"entity.luckytntmod.turret_tnt" : "Динамит Турель",
 	"entity.luckytntmod.pulse_tnt" : "Пульсирующий Динамит",
 	"entity.luckytntmod.dividing_tnt" : "Делящийся Динамит",
-	"entity.luckytntmod.picky_tnt" : "Ломающий Динамит",
+	"entity.luckytntmod.picky_tnt" : "Подбирающий Динамит",
 	"entity.luckytntmod.big_tnt" : "Большой Динамит",
 	"entity.luckytntmod.ice_meteor_tnt" : "Динамит-Ледяной Метеор",
 	"entity.luckytntmod.honey_tnt" : "Медовый Динамит",
@@ -524,7 +524,7 @@
 	"entity.luckytntmod.plantation_tnt" : "Плантационный Динамит",
 	"entity.luckytntmod.gotthard_tunnel" : "Тунель Готарда",
 	"entity.luckytntmod.levitating_tnt" : "Левитирующий Динамит",
-	"entity.luckytntmod.squaring_tnt" : "Размножающийся Дианмит",
+	"entity.luckytntmod.squaring_tnt" : "Размножающийся Динамит",
 	"entity.luckytntmod.mineral_tnt" : "Минеральный Динамит",
 	"entity.luckytntmod.flower_forest_tnt" : "Динамит Цветочного Леса",
 	"entity.luckytntmod.icy_tnt" : "Ледяной Динамит",
@@ -628,7 +628,7 @@
 	"entity.luckytntmod.homing_dynamite" : "Самонаводящаяся Динамитная Шашка",
 	"entity.luckytntmod.pulse_dynamite" : "Пульсирующая Динамитная Шашка",
 	"entity.luckytntmod.physics_dynamite" : "Физическая Динамитная Шашка",
-	"entity.luckytntmod.picky_dynamite" : "Ломающая Динамитная Шашка",
+	"entity.luckytntmod.picky_dynamite" : "Подбирающая Динамитная Шашка",
 	"entity.luckytntmod.cluster_dynamite" : "Кластерная Динамитная Шашка",
 	"entity.luckytntmod.tunneling_dynamite" : "Тунелирующая Динамитная Шашка",
 	"entity.luckytntmod.xray_dynamite" : "XRay Динамитная Шашка",
