--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -202,6 +202,7 @@
 	"block.luckytntmod.sculk_tnt" : "Sculk TNT",
 	"block.luckytntmod.deimos" : "Deimos",
 	"block.luckytntmod.phobos" : "Phobos",
+	"block.luckytntmod.present_drop" : "Present Drop",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -213,6 +214,7 @@
 	"block.luckytntmod.obsidian_activator_rail" : "Obsidian Activator Rail",
 	"block.luckytntmod.obsidian_detector_rail" : "Obsidian Detector Rail",
 	"block.luckytntmod.toxic_stone" : "Toxic Stone",
+	"block.luckytntmod.present" : "Present",
 
 	"item.luckytntmod.dynamite" : "Dynamite",
 	"item.luckytntmod.dynamite_x5" : "Dynamite x5",
@@ -578,6 +580,7 @@
 	"entity.luckytntmod.sculk_tnt" : "Sculk TNT",
 	"entity.luckytntmod.deimos" : "Deimos",
 	"entity.luckytntmod.phobos" : "Phobos",
+	"entity.luckytntmod.present_drop" : "Present Drop",
 				
 	"entity.luckytntmod.dynamite" : "Dynamite",
 	"entity.luckytntmod.dynamite_x5" : "Dynamite x5",
@@ -740,6 +743,7 @@
 	"entity.luckytntmod.mini_ice_meteor" : "Mini Ice Meteor",
 	"entity.luckytntmod.deimos_meteor" : "Deimos Meteor",
 	"entity.luckytntmod.phobos_meteor" : "Phobos Meteor",
+	"entity.luckytntmod.present_meteor" : "Present Meteor",
 
 	"entity.luckytntmod.angry_miner" : "Angry Miner",
 	"entity.luckytntmod.toxic_cloud" : "Toxic Cloud",
@@ -750,7 +754,7 @@
 	"itemGroup.god_tnt" : "God TNT",
 	"itemGroup.doomsday_tnt" : "Doomsday TNT",
 	"itemGroup.dynamite" : "Dynamite",
-	"itemGroup.minecart" : "TNT Minecarts",
+	"itemGroup.minecarts" : "TNT Minecarts",
 	"itemGroup.other" : "Other",
 	
 	"effect.contaminated_effect" : "Contaminated",
@@ -785,6 +789,7 @@
    	"luckytntmod.config.average_intensity": "Average Disaster intensity",
 	"luckytntmod.config.event_always_active": "Permanent Season Events",
 	"luckytntmod.config.render_overlay": "Render Contaminated Overlay",
+	"luckytntmod.config.present_drop": "Present Drop destroys blocks",
 	"luckytntmod.config.light_engine": "Light Engine Speed",
 	"luckytntmod.config.light_engine_tooltip": "Determines the speed the light engine works at. 5 is the Minecraft default value. The higher the value the faster the light engine will work. Higher values require more resources.",
 	
