--- a/src/main/resources/assets/luckytntmod/lang/ru_ru.json
+++ b/src/main/resources/assets/luckytntmod/lang/ru_ru.json
@@ -170,7 +170,7 @@
 	"block.luckytntmod.jumping_tnt" : "Прыгающий Динамит",
 	"block.luckytntmod.wasteland_tnt" : "Динамит-Пустошь",
 	"block.luckytntmod.tnt_x10000" : "Динамит x10000",
-	"block.luckytntmod.custom_firework" : "Настраиваемый Динамит",
+	"block.luckytntmod.custom_firework" : "Настраиваемый Фейерверк",
 	"block.luckytntmod.atlantis" : "Атлантида",
 	"block.luckytntmod.solar_eruption" : "Солнечная Вспышка",
 	"block.luckytntmod.vredefort" : "Вредефорт",
@@ -550,7 +550,7 @@
 	"entity.luckytntmod.jumping_tnt" : "Прыгающий Динамит",
 	"entity.luckytntmod.wasteland_tnt" : "Динамит-Пустошь",
 	"entity.luckytntmod.tnt_x10000" : "Динамит x10000",
-	"entity.luckytntmod.custom_firework" : "Настраиваемый Динамит",
+	"entity.luckytntmod.custom_firework" : "Настраиваемый Фейерверк",
 	"entity.luckytntmod.atlantis" : "Атлантида",
 	"entity.luckytntmod.solar_eruption" : "Солнечная Вспышка",
 	"entity.luckytntmod.vredefort" : "Вредефорт",
